# swagger/swagger.yaml
@@ -2,11 +2,17 @@
 openapi: 3.0.1
 info:
   title: API
+consumes:
+- application/json
+produces:
+- application/json
 servers:
-- url: http://{defaultHost}
-  variables:
-    defaultHost:
-      default: localhost:3000
+- url: http://aba-center-be.herokuapp.com
+- url: http://localhost:3000
+
+schemes:
+- "https"
+- "http"
 paths:
   "/auth":
     post:
@@ -163,6 +169,31 @@ paths:
               example:
                 success: false
                 errors: ["Unauthorized"]
+
+  "/organizations/:organization_id/clinics":
+    get:
+      summary: List of an organization's clinics
+      parameters:
+      - in: "path"
+        name: "organization_id"
+        description: "Organization id"
+        required: true
+      responses:
+        "200":
+          description: "Clinics list"
+          content:
+            application/json:
+              example:
+                [
+                  {
+                      "id": 1,
+                      "name": "cli1"
+                  },
+                  {
+                      "id": 2,
+                      "name": "cli2"
+                  }
+                ]
           
 definitions:
   UserRegistrationParameters:
